--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cheerio": "^1.0.0-rc.12",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "zod": "^3.23.8"
   }
 }
